Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99019

PhongMaterial does not work in GLES2

XMLWordPrintable

    • Android
    • d6a9ed503 (dev), ae3fee7cb (tqtc/lts-6.2), cf631950b (6.5), 2459f5f02 (6.4)

      When PhongMaterial is used, following shader error occurs:

      W libTest38_x86_64.so: QOpenGLShader::compile(Fragment): ERROR: 0:6: 'attribute' :  supported in vertex shaders only
      W libTest38_x86_64.so: ERROR: 0:7: 'attribute' :  supported in vertex shaders only
      12-08 08:35:33.255 13633 13663 W libTest38_x86_64.so:
      W libTest38_x86_64.so: *** Problematic Fragment shader source code ***
      W libTest38_x86_64.so: #version 100
      W libTest38_x86_64.so: #ifdef GL_KHR_blend_equation_advanced
      W libTest38_x86_64.so: #extension GL_ARB_fragment_coord_conventions : enable
      W libTest38_x86_64.so: #extension GL_KHR_blend_equation_advanced : enable
      W libTest38_x86_64.so: #endif
      W libTest38_x86_64.so: #ifndef GL_FRAGMENT_PRECISION_HIGH
      W libTest38_x86_64.so: #define highp mediump
      W libTest38_x86_64.so: #endif
      W libTest38_x86_64.so: #line 1
      12-08 08:35:33.255 13633 13663 W libTest38_x86_64.so:
      W libTest38_x86_64.so: #define LAYER_diffuse
      W libTest38_x86_64.so: #define LAYER_specular
      W libTest38_x86_64.so: #define LAYER_normal
      W libTest38_x86_64.so: uniform highp vec3 eyePosition;
      W libTest38_x86_64.so: attribute highp vec3 worldPosition;
      W libTest38_x86_64.so: attribute highp vec3 worldNormal;
      W libTest38_x86_64.so: uniform highp float shininess;
      W libTest38_x86_64.so: uniform highp vec4 ks;
      W libTest38_x86_64.so: uniform highp vec4 kd;
      W libTest38_x86_64.so: uniform highp vec4 ka;
      W libTest38_x86_64.so: /****************************************************************************
      W libTest38_x86_64.so: **
      W libTest38_x86_64.so: ** Copyright (C) 2017 Klaralvdalens Datakonsult AB (KDAB).
      W libTest38_x86_64.so: ** Contact: https://www.qt.io/licensing/
      W libTest38_x86_64.so: **
      W libTest38_x86_64.so: ** This file is part of the Qt3D module of the Qt Toolkit.
      W libTest38_x86_64.so: **
      W libTest38_x86_64.so: ** $QT_BEGIN_LICENSE:BSD$
      W libTest38_x86_64.so: ** Commercial License Usage
      W libTest38_x86_64.so: ** Licensees holding valid commercial Qt licenses may use this file in
      W libTest38_x86_64.so: ** accordance with the commercial license agreement provided with the
      W libTest38_x86_64.so: ** Software or, alternatively,
      

        1. qtbug99019.tar.gz
          1 kB
          Joni Poikelin
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            inho Inho Lee
            poikelin Joni Poikelin
            Votes:
            4 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes