Fix the input qualifier of the fragment shader for GLSL1.10

FS's input qualifier is different with VS's in GLSL1.10.
If prototypes has 'headerSnippetsFrag', it will be applied for FS
instead of 'headerSnippets'.

Fixes: QTBUG-99019
Change-Id: I588d3f78d4ba895a9a90b20a87b92a6da9ffee18
Reviewed-by: Janne Koskinen <janne.p.koskinen@qt.io>
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>
(cherry picked from commit d6a9ed5039ef4f1f836f5786998485ee6016b315)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>